--- a/frond/public/index_homepage.html
+++ b/frond/public/index_homepage.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link rel="icon" href="images/logo/e.png">
+    <link rel="icon" href="small_logo.png">
     <title>NTUA Flix</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
 
 
     <div class="logo">
-        <img src="images/logo/e.png" alt="">
+        <img src="big_logo.png" alt="">
         <h3>NTUA Flix</h3>
     </div>
     <div class="nav" id="small_menu">
