--- a/frond/public/index_movie_details.html
+++ b/frond/public/index_movie_details.html
@@ -44,20 +44,11 @@
 
 
 
-<div class="latest-movies">
-    <h1>Cast & Crew</h1>
-    <div class="latest-container" id="latestContainer">
-    </div>
-</div>
-<script src="latestMovies.js"></script>
-
-
-
 <section>
-    <div class="sollywood-movies" id="sollywood">
+    <div class="hollywood-movies" id="hollywood">
         <h1>Details</h1>
-        <div class="sollywood-container" id="sollywoodContainer">
-            <div class="sollywood-inside">
+        <div class="hollywood-container" id="hollywoodContainer">
+            <div class="hollywood-inside">
                 <div class="details-row">
                     <h3>Category:</h3>
                     <h3>Short, Comedy</h3>
@@ -78,6 +69,14 @@
         </div>
     </div>
 </section>
+
+
+<div class="latest-movies">
+    <h1>Cast & Crew</h1>
+    <div class="latest-container" id="latestContainer">
+    </div>
+</div>
+<script src="latestMovies.js"></script>
 
 <!--Goto button-->
 <div class="scroll">
