--- a/frond2/dwra_search/results.html
+++ b/frond2/dwra_search/results.html
@@ -1,1 +1,112 @@
+ <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Search Results</title>
+    <style>
+        #nameResults {
+            float: right;
+            margin-left: 20px;
+        }
+    </style>
+</head>
+<body>
+    <h1>Search Results</h1>
 
+    <div id="titleResults">
+        <h2>Title Results</h2>
+        <ul id="titleContainer"></ul>
+    </div>
+
+    <div id="nameResults">
+        <h2>Name Results</h2>
+        <ul id="nameContainer"></ul>
+    </div>
+
+    <script>
+        // Function to parse query parameters from the URL
+        function getQueryParams() {
+            const queryParams = {};
+            const queryString = window.location.search.substring(1);
+            const params = queryString.split('&');
+
+            for (const param of params) {
+                const [key, value] = param.split('=');
+                queryParams[key] = decodeURIComponent(value);
+            }
+
+            return queryParams;
+        }
+
+        // Function to display search results
+        function displayResults() {
+            
+            const queryParams = getQueryParams();
+            const titleData = JSON.parse(localStorage.getItem('titleData') || 'null');
+    const nameData = JSON.parse(localStorage.getItem('nameData') || 'null');
+            const titleContainer = document.getElementById('titleContainer');
+            const nameContainer = document.getElementById('nameContainer');
+
+            if (titleData) {
+                titleContainer.innerHTML = '';
+
+                if (titleData.status === 'success' && titleData.data.length > 0) {
+                    titleData.data.forEach(movie => {
+                        const listItem = document.createElement('li');
+                        listItem.innerHTML = `
+                            <strong>${movie.title_type}</strong> - <br>
+                            ${movie.title_primaryTitle} - <br>
+                            ${movie.title_originalTitle} - <br>
+                            ${movie.title_isAdult ? 'For Adults' : 'For All Ages'} - <br>
+                            ${movie.title_startYear ? 'Start Year: ' + movie.title_startYear : ''} - 
+                            ${movie.title_endYear ? 'End Year: ' + movie.title_endYear : 'Present'} - <br>
+                            ${movie.title_runtimeMinutes ? 'Runtime: ' + movie.title_runtimeMinutes + ' mins' : ''} - <br>
+
+                            <em>Poster:</em> <img src="${getPosterUrl(movie.title_posterURL, 'w92')}" alt="Movie Poster" style="max-height: 100px;"> - <br>
+                            <em>Average Rating:</em> ${movie.avRating !== undefined ? 'Rating: ' + movie.avRating.toFixed(1) : 'Rating: Not available'} - <br>
+                            <em>Number of Votes:</em> ${movie.nVotes !== undefined ? 'Votes: ' + movie.nVotes : 'Votes: Not available'} <br><br>
+                        `;
+                        titleContainer.appendChild(listItem);
+                    });
+                } else {
+                    titleContainer.innerHTML = 'No matching movies found.';
+                }
+            }
+
+            if (nameData) {
+                nameContainer.innerHTML = '';
+
+                if (nameData.length > 0) {
+                    nameData.forEach(name => {
+                        const listItem = document.createElement('li');
+                        listItem.innerHTML = `
+                            <strong>${name.name}</strong> - <br>
+                            Birth Year: ${name.birthYr || 'N/A'} - <br>
+                            Death Year: ${name.deathYr || 'Present'} - <br>
+                            Profession: ${name.profession || 'N/A'} - <br>
+                            <em>Poster:</em> <img src="${getPosterUrl(name.namePoster, 'w92')}" alt="Name Poster" style="max-height: 100px;"> <br><br>
+                        `;
+                        nameContainer.appendChild(listItem);
+                    });
+                } else {
+                    if (!titleData || (titleData.status !== 'success' || titleData.data.length === 0)) {
+                        nameContainer.innerHTML = 'No matching names found.';
+                    }
+                }
+            }
+        }
+
+        function getPosterUrl(url, width) {
+            if (url) {
+                return url.replace('{width_variable}', width);
+            }
+            return '';
+        }
+
+        // Call displayResults function when the page loads
+        window.onload = displayResults;
+    </script>
+</body>
+</html>
