--- a/public/index_homepage.html
+++ b/public/index_homepage.html
@@ -32,8 +32,8 @@
             </button>
         </div>
         <div class="user">
-            <i class="fas fa-bell"></i>
-        </div>
+            <i class="fas fa-search"></i>
+        </div> 
     </header>
 
     <!-- Hero section -->
