--- a/public/index_movie_details.html
+++ b/public/index_movie_details.html
@@ -24,18 +24,19 @@
 
     <!-- Hero section -->
     <section>
-        <div class="heropage">
-            <div class="inside-heropage">
-                <h1 id="movieTitle"></h1>
-                <p id="movieCategory"></p>
-                <p id="movieReleaseYear"></p>
-                <p id="movieRating"></p>
-                <p id="movieVotes"></p>
+        <section>
+            <div class="heropage">
+                <div class="inside-heropage" style="margin-top: -70px;">
+                    <h1 id="movieTitle"></h1>
+                    <p id="movieCategory"></p>
+                    <p id="movieReleaseYear"></p>
+                    <p id="movieRating"></p>
+                    <p id="movieVotes"></p>
+                    
+                </div>
             </div>
-        </div>
-        <div class="poster">
-            <img src="big_logo.png" alt="">
-            <!-- there goes the movie picture -->
+            <div class="poster">
+                <img src="big_logo.png" alt="">
         </div>
     </section>
 
@@ -50,7 +51,7 @@
     <div class="scroll">
         <a href=""><i class="fas fa-arrow-up"></i></a>
     </div>
-
+     
     <!-- Script for handling query parameters and setting values -->
     <script>
         document.addEventListener('DOMContentLoaded', function () {
@@ -60,26 +61,34 @@
             const releaseYear = queryParams['releaseYear'] || '';
             const rating = queryParams['rating'] || '';
             const votes = queryParams['votes'] || '';
+            const isAdult = queryParams['isAdult'] || ''; // Add this line
+    const runtimeMinutes = queryParams['runtimeMinutes'] || ''; // Add this line
 
             document.getElementById('movieTitle').textContent = title;
             document.getElementById('movieCategory').textContent = `Category: ${category}`;
             document.getElementById('movieReleaseYear').textContent = `Release Year: ${releaseYear}`;
             document.getElementById('movieRating').textContent = `Rating: ${rating}`;
             document.getElementById('movieVotes').textContent = `Votes: ${votes}`;
+
+            const detailsContainer = document.querySelector('.inside-heropage');
+        detailsContainer.innerHTML += `
+            <p>For ${isAdult ? 'Adults' : 'All Ages'}</p>
+            <p>${runtimeMinutes ? 'Runtime: ' + runtimeMinutes + ' mins' : ''}</p>
+        `;
         });
 
         function getQueryParams() {
-            const queryParams = {};
-            const queryString = window.location.search.substring(1);
-            const params = queryString.split('&');
+        const queryParams = {};
+        const queryString = window.location.search.substring(1);
+        const params = queryString.split('&');
 
-            for (const param of params) {
-                const [key, value] = param.split('=');
-                queryParams[key] = decodeURIComponent(value);
-            }
-
-            return queryParams;
+        for (const param of params) {
+            const [key, value] = param.split('=');
+            queryParams[key] = decodeURIComponent(value);
         }
+
+        return queryParams;
+    }
     </script>
 </body>
 </html>
