--- a/public/index_actor_details.html
+++ b/public/index_actor_details.html
@@ -7,14 +7,16 @@
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="icon" href="small_logo.png">
-    <title>John Lennon</title>
+    <title id="actorName">NTUA Flix</title>
 </head>
 
 <body>
     <header>
         <div class="logo">
-            <img src="big_logo.png" alt="">
-            <h3>NTUA Flix</h3>
+            <a href="index_homepage.html">
+                <img src="big_logo.png" alt="">
+                <h3>NTUA Flix</h3>
+            </a>
         </div>
         <div class="user">
             <i class="fas fa-search"></i>
@@ -36,47 +38,15 @@
         </div>
     </section>
     <div class="slatest-movies">
-        <h1>Movies</h1>
+        <h1>works</h1>
         <div class="slatest-container" id="slatestContainer"></div>
     </div>
-    <script src="works.js"></script>
+     
+    <script src="workofactor.js"></script>
+    <script src="actordetails.js"></script>
     <script>
-        function getQueryParams() {
-            const queryParams = {};
-            const queryString = window.location.search.substring(1);
-            const params = queryString.split('&');
-
-            for (const param of params) {
-                const [key, value] = param.split('=');
-                queryParams[key] = decodeURIComponent(value);
-            }
-
-            return queryParams;
-        }
-
-        function getQueryParam(param) {
-            const queryParams = getQueryParams();
-            return queryParams[param] || 'N/A';
-        }
-
-        document.addEventListener('DOMContentLoaded', function () {
-    const nameID = getQueryParam('nameID');
-    // Fetch actor details using an API endpoint
-    fetch(`https://localhost:8765/energy/api/name/${nameID}`)
-        .then(response => response.json())
-        .then(data => {
-            const actorDetails = data.nameObject;
-            document.getElementById('actorName').textContent = actorDetails.name;
-            document.getElementById('birthYear').textContent = `Birth Year: ${actorDetails.birthYr}`;
-            document.getElementById('deathYear').textContent = `Death Year: ${actorDetails.deathYr}`;
-            document.getElementById('profession').textContent = `Profession: ${actorDetails.profession}`;
-            
-            // Replace {width_variable} with 'w500' or your desired width
-            const posterUrl = actorDetails.namePoster.replace('{width_variable}', 'w500') || 'default_poster.jpg';
-            document.getElementById('posterImg').src = posterUrl;
-        })
-        .catch(error => console.error('Error fetching actor details:', error));
-});
+        // Set the page title dynamically based on the content of the movieTitle element
+        document.title = document.getElementById('actorName').innerText + ' - NTUA Flix';
     </script>
 </body>
 </html>
