--- a/public/index_movie_details.html
+++ b/public/index_movie_details.html
@@ -7,12 +7,11 @@
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="icon" href="small_logo.png">
-    <title>MOVIE</title>
-    <!-- there goes the title of the movie -->
+    <title id="movieTitle">NTUA Flix</title>
 
 
     <style>
-      .slatest-movies {
+        .slatest-movies {
             position: relative; /* Position relative for absolute arrow placement */
             overflow-x: auto; /* Enable horizontal scrolling */
         }
@@ -37,14 +36,20 @@
             flex: 0 0 auto; /* Do not allow items to grow or shrink, fixed size */
             width: 200px; /* Set a fixed width for each slatest movie element */
         }
+        #moviePrincipals,
+        #movieTitleAkas {
+        display: none; /* Hide the element with ID movieTitleAkas */
+    }
     </style>
 </head>
 
 <body>
     <header>
         <div class="logo">
-            <img src="big_logo.png" alt="">
-            <h3>NTUA Flix</h3>
+            <a href="index_homepage.html">
+                <img src="big_logo.png" alt="">
+                <h3>NTUA Flix</h3>
+            </a>
         </div>
         <div class="user">
             <i class="fas fa-search"></i>
@@ -63,7 +68,7 @@
                     <p id="movieVotes"></p>
                     <p id="movieGenres"></p>
                 <!-- Display titleAkas -->
-                <p id="movieTitleAkas"></p>
+                 <p id="movieTitleAkas"></p> 
                 <!-- Display principals -->
                 <div id="moviePrincipals"></div>
                     
@@ -88,7 +93,14 @@
     <div class="scroll">
         <a href=""><i class="fas fa-arrow-up"></i></a>
     </div>
-     
+    <div class="scroll">
+        <a href="#" id="scrollLeftBtn"><i class="fas fa-arrow-left"></i></a>
+        <a href="#" id="scrollRightBtn"><i class="fas fa-arrow-right"></i></a>
+    </div>
     <script src="movie.js"></script>
+    <script>
+        // Set the page title dynamically based on the content of the movieTitle element
+        document.title = document.getElementById('movieTitle').innerText + ' - NTUA Flix';
+    </script>
 </body>
 </html>
