--- a/public/results.html
+++ b/public/results.html
@@ -14,8 +14,10 @@
     <!--Header section-->
     <header>
         <div class="logo">
-            <img src="big_logo.png" alt="">
-            <h3>NTUA Flix</h3>
+            <a href="index_homepage.html">
+                <img src="big_logo.png" alt="">
+                <h3>NTUA Flix</h3>
+            </a>
         </div>
         <div id="searchContainer">
             <label for="searchInput">Search by title:</label>
