--- a/frontt/public/index_actor_details.html
+++ b/frontt/public/index_actor_details.html
@@ -26,7 +26,7 @@
     <!-- Hero section -->
     <section>
         <div class="heropage">
-            <div class="inside-heropage">
+            <div class="inside-heropage" style="margin-top: 0px;">
                 <h1 id="actorName"></h1>
                 <p id="profession"></p>
                 <p id="birthYear"></p>
