--- a/Ffront/public/index_homepage.html
+++ b/Ffront/public/index_homepage.html
@@ -52,7 +52,7 @@
     
                 </div>
                 <h1>Find movie and TV-show</h1>
-                <p1>base on genre</p1>
+                <p1>based on genre</p1>
                 <div class="btn1">
                     <a href="bygenre.html">
                         <i class="fas fa-play"></i>Go to search by genre
