Removed Shadow Box from Search

--- a/afro-front/public/bygenre.html
+++ b/afro-front/public/bygenre.html
@@ -72,7 +72,7 @@ label, select, input, button {
 #searchContainer {
     background-color: #00000000;
     padding: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    box-shadow: none;
     z-index: 1000;
     margin-left: 10px; /* Adjust this value as needed for spacing */
 }    
