--- a/afro-front/public/index_homepage.html
+++ b/afro-front/public/index_homepage.html
@@ -25,7 +25,7 @@
                 transform: translate(-50%, -50%);
                 background-color: #00000000; /* Add background color if needed */
                 padding: 10px;
-                box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); /* Add a box shadow for a nice visual effect */
+                box-shadow: none; /* Add a box shadow for a nice visual effect */
                 z-index: 1000; /* Set the z-index to ensure it's on top of other elements */
             }
         </style>
