--- a/afro-front/public/searchbar.html
+++ b/afro-front/public/searchbar.html
@@ -44,7 +44,7 @@ body {
     text-shadow: 0 0 10px #ccc;
     padding: 0 80px 0 20px;
     border-radius: 30px;
-    box-shadow: 12px 13px 15px 0 #111, 8px 9px 25px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: none;
     transition: all 1s;
     opacity: 0;
     z-index: 5;
