--- a/afro-front/public/results.html
+++ b/afro-front/public/results.html
@@ -56,12 +56,12 @@
     <div id="viewContainer">
     <div id="resultsContainer">
         <div id="titleResults" onclick="goToTitleDetails()">
-            <h2>Title Results</h2>
+            <h2>Movies & TV Shows</h2>
             <div id="titleContainer"></div>
         </div>
 
         <div id="nameResults" onclick="goToNameDetails()">
-            <h2>Name Results</h2>
+            <h2>Cast & Crew</h2>
             <div id="nameContainer"></div>
         </div>
     </div>
